--- a/index.html
+++ b/index.html
@@ -58,66 +58,69 @@
     <!-- html part -->
 
     <!-- header  -->
-    <div class="top-menu">
-        <div>
-            <a href="#">
-                <svg class="dropdown" width="18" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="#dropdown"></use>
-                </svg>
-            </a>
-            <a href="#"><svg class="youtube-logo" width="78" viewBox="0 0 78 18" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="#youtube-logo"></use>
-                </svg>
-            </a>
-        </div>
-        <div>
-            <form action="">
-                <input type="text" placeholder="Search" />
-                <button type="submit" class="search-button">
-                    <svg width="14" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M10.7204 9.43396H10.0429L9.80274 9.2024C10.6432 8.2247 11.1492 6.9554 11.1492 5.57461C11.1492 2.49571 8.65352 0 5.57461 0C2.49571 0 0 2.49571 0 5.57461C0 8.65352 2.49571 11.1492 5.57461 11.1492C6.9554 11.1492 8.2247 10.6432 9.2024 9.80274L9.43396 10.0429V10.7204L13.7221 15L15 13.7221L10.7204 9.43396ZM5.57461 9.43396C3.43911 9.43396 1.71527 7.71012 1.71527 5.57461C1.71527 3.43911 3.43911 1.71527 5.57461 1.71527C7.71012 1.71527 9.43396 3.43911 9.43396 5.57461C9.43396 7.71012 7.71012 9.43396 5.57461 9.43396Z"
-                            fill="inherit" />
+    <header>
+        <div class="top-menu">
+            <div>
+                <a href="#">
+                    <svg class="dropdown" width="18" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <use xlink:href="#dropdown"></use>
                     </svg>
-                </button>
-            </form>
+                </a>
+                <a href="#"><svg class="youtube-logo" width="78" viewBox="0 0 78 18" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <use xlink:href="#youtube-logo"></use>
+                    </svg>
+                </a>
+            </div>
+            <div>
+                <form action="">
+                    <input type="text" placeholder="Search" />
+                    <button type="submit" class="search-button">
+                        <svg width="14" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M10.7204 9.43396H10.0429L9.80274 9.2024C10.6432 8.2247 11.1492 6.9554 11.1492 5.57461C11.1492 2.49571 8.65352 0 5.57461 0C2.49571 0 0 2.49571 0 5.57461C0 8.65352 2.49571 11.1492 5.57461 11.1492C6.9554 11.1492 8.2247 10.6432 9.2024 9.80274L9.43396 10.0429V10.7204L13.7221 15L15 13.7221L10.7204 9.43396ZM5.57461 9.43396C3.43911 9.43396 1.71527 7.71012 1.71527 5.57461C1.71527 3.43911 3.43911 1.71527 5.57461 1.71527C7.71012 1.71527 9.43396 3.43911 9.43396 5.57461C9.43396 7.71012 7.71012 9.43396 5.57461 9.43396Z"
+                                fill="inherit" />
+                        </svg>
+                    </button>
+                </form>
+            </div>
+            <nav>
+                <a href="#">
+                    <svg width="18" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M14 4.5V1C14 0.45 13.55 0 13 0H1C0.45 0 0 0.45 0 1V11C0 11.55 0.45 12 1 12H13C13.55 12 14 11.55 14 11V7.5L18 11.5V0.5L14 4.5ZM11 7H8V10H6V7H3V5H6V2H8V5H11V7Z"
+                            fill="#606060" />
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg width="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M0 4H4V0H0V4ZM6 16H10V12H6V16ZM0 16H4V12H0V16ZM0 10H4V6H0V10ZM6 10H10V6H6V10ZM12 0V4H16V0H12ZM6 4H10V0H6V4ZM12 10H16V6H12V10ZM12 16H16V12H12V16Z"
+                            fill="#606060" />
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M8 19.5C9.1 19.5 10 18.6 10 17.5H6C6 18.6 6.9 19.5 8 19.5ZM14 13.5V8.5C14 5.43 12.36 2.86 9.5 2.18V1.5C9.5 0.67 8.83 0 8 0C7.17 0 6.5 0.67 6.5 1.5V2.18C3.63 2.86 2 5.42 2 8.5V13.5L0 15.5V16.5H16V15.5L14 13.5Z"
+                            fill="#606060" />
+                    </svg>
+                </a>
+                <a class="red-point" href="#">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="9" cy="9" r="9" fill="#BC271A" />
+                    </svg>
+
+                </a>
+                <a href="#">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="16" cy="16" r="16" fill="#0572EF" />
+                    </svg>
+                </a>
+            </nav>
         </div>
-        <nav>
-            <a href="#">
-                <svg width="18" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M14 4.5V1C14 0.45 13.55 0 13 0H1C0.45 0 0 0.45 0 1V11C0 11.55 0.45 12 1 12H13C13.55 12 14 11.55 14 11V7.5L18 11.5V0.5L14 4.5ZM11 7H8V10H6V7H3V5H6V2H8V5H11V7Z"
-                        fill="#606060" />
-                </svg>
-            </a>
-            <a href="#">
-                <svg width="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M0 4H4V0H0V4ZM6 16H10V12H6V16ZM0 16H4V12H0V16ZM0 10H4V6H0V10ZM6 10H10V6H6V10ZM12 0V4H16V0H12ZM6 4H10V0H6V4ZM12 10H16V6H12V10ZM12 16H16V12H12V16Z"
-                        fill="#606060" />
-                </svg>
-            </a>
-            <a href="#">
-                <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M8 19.5C9.1 19.5 10 18.6 10 17.5H6C6 18.6 6.9 19.5 8 19.5ZM14 13.5V8.5C14 5.43 12.36 2.86 9.5 2.18V1.5C9.5 0.67 8.83 0 8 0C7.17 0 6.5 0.67 6.5 1.5V2.18C3.63 2.86 2 5.42 2 8.5V13.5L0 15.5V16.5H16V15.5L14 13.5Z"
-                        fill="#606060" />
-                </svg>
-            </a>
-            <a class="red-point" href="#">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="9" cy="9" r="9" fill="#BC271A" />
-                </svg>
-                
-            </a>
-            <a href="#">
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="16" cy="16" r="16" fill="#0572EF" />
-                </svg>
-            </a>
-        </nav>
-    </div>
+    </header>
+
 
     <!-- side menu part -->
 
@@ -383,6 +386,7 @@
         </svg> -->
 
     </nav>
+    <script src="script.js"></script>
 </body>
 
 </html>
